feat: implement temporary role assignment and fix resource-related startup errors